// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiColorPalettePicker is rendered 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value=""
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="aria-label"
        class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-euiTestCss"
        data-test-subj="test subject string"
        type="button"
      />
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected custom text 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value="custom"
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="aria-label"
        class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-euiTestCss"
        data-test-subj="test subject string"
        type="button"
      >
        Plain text as a custom option
      </button>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected fixed palette 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value="paletteFixed"
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="aria-label"
        class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-euiTestCss"
        data-test-subj="test subject string"
        type="button"
      >
        <span
          class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
        >
          <span
            class="emotion-euiScreenReaderOnly"
          >
            Palette 1
          </span>
          <span
            aria-hidden="true"
            class="euiColorPaletteDisplayFixed__bleedArea emotion-euiColorPaletteDisplayFixed__bleedArea"
          >
            <span
              style="background-color: rgb(31, 176, 178); width: 20%;"
            />
            <span
              style="background-color: rgb(255, 219, 109); width: 20%;"
            />
            <span
              style="background-color: rgb(238, 145, 145); width: 20%;"
            />
            <span
              style="background-color: rgb(255, 255, 255); width: 20%;"
            />
            <span
              style="background-color: rgb(136, 128, 148); width: 20%;"
            />
          </span>
        </span>
      </button>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected gradient palette 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value="paletteLinear"
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="aria-label"
        class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-euiTestCss"
        data-test-subj="test subject string"
        type="button"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Linear Gradient
        </span>
        <span
          aria-hidden="true"
          class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
        />
      </button>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with a selected gradient palette with stops 1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value="paletteLinearStops"
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="aria-label"
        class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-euiTestCss"
        data-test-subj="test subject string"
        type="button"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Linear Gradient with stops
        </span>
        <span
          aria-hidden="true"
          class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
        />
      </button>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker is rendered with the prop selectionDisplay set as title  1`] = `
<div
  class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
>
  <input
    type="hidden"
    value="paletteFixed"
  />
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlRightIconsCount: 1;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="aria-label"
        class="euiSuperSelectControl testClass1 testClass2 emotion-euiSuperSelect__control-euiTestCss"
        data-test-subj="test subject string"
        type="button"
      >
        Palette 1
      </button>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="chevronSingleDown"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiColorPalettePicker more props are propagated to each option 1`] = `
<body>
  <div>
    <div
      class="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-block-EuiInputPopover"
    >
      <input
        type="hidden"
        value="paletteFixed"
      />
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <button
            aria-controls="euiPopover_generated-id_panelId"
            aria-expanded="true"
            aria-haspopup="listbox"
            class="euiSuperSelectControl emotion-euiSuperSelect__control-open"
            data-test-subj="colorPalettePicker"
            type="button"
          >
            <span
              class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
            >
              <span
                class="emotion-euiScreenReaderOnly"
              >
                Palette 1
              </span>
              <span
                aria-hidden="true"
                class="euiColorPaletteDisplayFixed__bleedArea emotion-euiColorPaletteDisplayFixed__bleedArea"
              >
                <span
                  style="background-color: rgb(31, 176, 178); width: 20%;"
                />
                <span
                  style="background-color: rgb(255, 219, 109); width: 20%;"
                />
                <span
                  style="background-color: rgb(238, 145, 145); width: 20%;"
                />
                <span
                  style="background-color: rgb(255, 255, 255); width: 20%;"
                />
                <span
                  style="background-color: rgb(136, 128, 148); width: 20%;"
                />
              </span>
            </span>
          </button>
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
            >
              <span
                aria-hidden="true"
                class="euiFormControlLayoutCustomIcon__icon"
                data-euiicon-type="chevronSingleDown"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
    <div
      data-focus-lock-disabled="disabled"
    >
      <div
        aria-live="assertive"
        aria-modal="true"
        class="euiPanel euiPanel--plain euiPopover__panel emotion-euiPanel-grow-m-plain-euiPopover__panel-light-isAttached-bottom"
        data-popover-panel="true"
        id="euiPopover_generated-id_panelId"
        role="dialog"
        style="top: 2px; left: 0px; will-change: transform, opacity; z-index: 2000; inline-size: 0px;"
      >
        <div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="-1"
          />
          <div
            data-focus-lock-disabled="disabled"
          >
            <p
              class="emotion-euiScreenReaderOnly"
              id="euiSuperSelect__generated-id__screenreaderDescribeId"
            >
              You are in a form selector and must select a single option. Use the Up and Down arrow keys to navigate or Escape to close.
            </p>
            <div
              aria-activedescendant="paletteFixed"
              aria-describedby="euiSuperSelect__generated-id__screenreaderDescribeId"
              aria-label="Select listbox"
              class="euiSuperSelect__listbox eui-scrollBar emotion-euiSuperSelect__listbox"
              role="listbox"
              tabindex="0"
            >
              <button
                aria-label="my palette fixed"
                aria-selected="true"
                class="euiListItemLayout euiSuperSelect__item paletteFixedClass emotion-euiListItemLayout-isInteractive-isFocused-isSelected-isSelectedFocused"
                data-test-subj="fixed-data-test-subj"
                id="paletteFixed"
                role="option"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
                    color="primary"
                    data-euiicon-type="check"
                  />
                  <span
                    class="euiListItemLayout__text emotion-euiListItemLayout__text-wrap"
                  >
                    <div
                      class="euiColorPalettePicker__item"
                    >
                      <div
                        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-stretch-row"
                      >
                        <div
                          class="euiFlexItem emotion-euiFlexItem-grow-1"
                        >
                          <div
                            aria-hidden="true"
                            class="euiText euiColorPalettePicker__itemTitle emotion-euiText-xs"
                          >
                            Palette 1
                          </div>
                        </div>
                      </div>
                      <div
                        class="euiSpacer euiSpacer--xs emotion-euiSpacer-xs"
                      />
                      <span
                        class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
                      >
                        <span
                          class="emotion-euiScreenReaderOnly"
                        >
                          Palette 1
                        </span>
                        <span
                          aria-hidden="true"
                          class="euiColorPaletteDisplayFixed__bleedArea emotion-euiColorPaletteDisplayFixed__bleedArea"
                        >
                          <span
                            style="background-color: rgb(31, 176, 178); width: 20%;"
                          />
                          <span
                            style="background-color: rgb(255, 219, 109); width: 20%;"
                          />
                          <span
                            style="background-color: rgb(238, 145, 145); width: 20%;"
                          />
                          <span
                            style="background-color: rgb(255, 255, 255); width: 20%;"
                          />
                          <span
                            style="background-color: rgb(136, 128, 148); width: 20%;"
                          />
                        </span>
                      </span>
                    </div>
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiListItemLayout euiSuperSelect__item paletteLinearClass emotion-euiListItemLayout-isInteractive"
                data-test-subj="gradient-data-test-subj"
                id="paletteLinear"
                role="option"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
                    color="text"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiListItemLayout__text emotion-euiListItemLayout__text-wrap"
                  >
                    <div
                      class="euiColorPalettePicker__item"
                    >
                      <div
                        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-stretch-row"
                      >
                        <div
                          class="euiFlexItem emotion-euiFlexItem-grow-1"
                        >
                          <div
                            aria-hidden="true"
                            class="euiText euiColorPalettePicker__itemTitle emotion-euiText-xs"
                          >
                            Linear Gradient
                          </div>
                        </div>
                      </div>
                      <div
                        class="euiSpacer euiSpacer--xs emotion-euiSpacer-xs"
                      />
                      <span
                        class="emotion-euiScreenReaderOnly"
                      >
                        Linear Gradient
                      </span>
                      <span
                        aria-hidden="true"
                        class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
                      />
                    </div>
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiListItemLayout euiSuperSelect__item emotion-euiListItemLayout-isInteractive"
                data-test-subj="gradient-with-stops-data-test-subj"
                id="paletteLinearStops"
                role="option"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
                    color="text"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiListItemLayout__text emotion-euiListItemLayout__text-wrap"
                  >
                    <div
                      class="euiColorPalettePicker__item"
                    >
                      <div
                        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-stretch-row"
                      >
                        <div
                          class="euiFlexItem emotion-euiFlexItem-grow-1"
                        >
                          <div
                            aria-hidden="true"
                            class="euiText euiColorPalettePicker__itemTitle emotion-euiText-xs"
                          >
                            Linear Gradient with stops
                          </div>
                        </div>
                      </div>
                      <div
                        class="euiSpacer euiSpacer--xs emotion-euiSpacer-xs"
                      />
                      <span
                        class="emotion-euiScreenReaderOnly"
                      >
                        Linear Gradient with stops
                      </span>
                      <span
                        aria-hidden="true"
                        class="euiColorPaletteDisplay emotion-euiColorPaletteDisplay-s"
                      />
                    </div>
                  </span>
                </span>
              </button>
              <button
                aria-selected="false"
                class="euiListItemLayout euiSuperSelect__item emotion-euiListItemLayout-isInteractive"
                data-test-subj="text-data-test-subj"
                id="custom"
                role="option"
              >
                <span
                  class="euiListItemLayout__content emotion-euiListItemLayout__content"
                >
                  <span
                    class="euiListItemLayout__icon emotion-euiListItemLayout__icon"
                    color="text"
                    data-euiicon-type="empty"
                  />
                  <span
                    class="euiListItemLayout__text emotion-euiListItemLayout__text-wrap"
                  >
                    <div
                      class="euiColorPalettePicker__item"
                    >
                      Plain text as a custom option
                    </div>
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            data-focus-guard="true"
            style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
            tabindex="-1"
          />
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="-1"
    />
  </div>
</body>
`;
